# grimoire

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml  lint.yml  release.yml  tome-build.yml
docs/: layout.md  multi-os-bootstrap.md  rune-authoring.md  threat-model.md
docs/design/: store-and-distro-model.md
docs/superpowers/plans/: 2026-06-06-core-toolchain-musl-clang.md  2026-06-06-signing-security-hardening.md
docs/superpowers/specs/: 2026-06-06-core-toolchain-musl-clang-design.md  2026-06-06-signing-security-design.md
src/: addendum.rs  build.rs  clean.rs  cli.rs  closure.rs  doctor.rs  fetch.rs  files.rs  fs_util.rs  index.rs  install.rs  lock.rs  main.rs  man.rs  model.rs  paths.rs  prefer.rs  preferences.rs  process_lock.rs  profile.rs  progress.rs  query.rs  resolve.rs  setup.rs  signing.rs  solve.rs  store.rs  sync_common.rs  toolchain.rs
src/archive/: mod.rs  pack.rs  unpack.rs  validate.rs
src/catalog/: addendum.rs  mod.rs  signing.rs  sync_common.rs
src/cmd/: clean.rs  doctor.rs  files.rs  generations.rs  man.rs  mod.rs  prefer.rs  query.rs  setup.rs
src/install/: build_deps.rs  lock.rs  mod.rs  orphans.rs  realize.rs  state.rs  steps.rs  transaction.rs  world.rs
src/model/: addendum_catalog.rs  catalog.rs  deps.rs  index.rs  mod.rs  package.rs  package_tests.rs  preferences.rs  state.rs  value.rs
src/nu/: mod.rs  nuon_io.rs  runtime.rs
src/nu/commands/: external.rs  fs.rs  mod.rs  values.rs
src/nu/runtime/: env.rs  eval.rs  meta_cache.rs  mod.rs
src/profile/: gc.rs  generations.rs  linking.rs  mod.rs
src/solve/: candidates.rs  capabilities.rs  mod.rs  plan.rs  resolver.rs
src/solve/resolver/: tests.rs
src/store/: closure.rs  mod.rs
src/store/closure/: capability.rs  mod.rs  stale.rs
src/tome/: authoring.rs  git.rs  lint.rs  mod.rs  news.rs  output_lint.rs  publish.rs  sign.rs  sync.rs  verify.rs
src/util/: fs_util.rs  mod.rs  paths.rs  process_lock.rs  progress.rs  table.rs  time_util.rs
src/util/output/: detail.rs  list.rs  mod.rs  progress.rs  result.rs
tests/: archives.rs  build_deps.rs  capabilities.rs  catalogs.rs  conflicts.rs  generations.rs  install.rs  orphans.rs  publishing.rs  queries.rs  renames.rs  signing.rs  smoke.rs  source_builds.rs  splits.rs  upgrade_drift.rs  upgrades.rs
tests/support/: fixtures.rs  mod.rs
