[package]
name = "grimoire"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A fast, git-native, cross-platform package manager with reproducible installs and composable customization layers."
license = "MIT"
repository = "https://github.com/grimoire-of-glass/grimoire"
homepage = "https://github.com/grimoire-of-glass/grimoire"
readme = "README.md"
keywords = ["package-manager", "cli", "homebrew", "scoop", "cross-platform"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["example/", "tests/", "docs/", ".github/", "grm", "AGENTS.md", "TODO.md"]

[[bin]]
name = "grm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6"
gix = { version = "0.84.0", features = ["blocking-network-client"] }
nu-cmd-lang = "0.113.1"
nu-command = "0.113.1"
nu-engine = { version = "0.113.1", features = ["os"] }
nu-parser = "0.113.1"
nu-protocol = { version = "0.113.1", features = ["os"] }
nuon = "0.113.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
ureq = "2"
walkdir = "2"
zstd = "0.13"

[dev-dependencies]
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
zstd = "0.13"
