[package]
name = "grimoire"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A fast, git-native, POSIX package manager with reproducible installs and composable customization layers."
license = "MIT"
repository = "https://github.com/grimoire-of-glass/grimoire"
homepage = "https://github.com/grimoire-of-glass/grimoire"
readme = "README.md"
keywords = ["package-manager", "cli", "homebrew", "nix"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "tome-example/",
    "addendum-example/",
    "tests/",
    "docs/",
    ".github/",
    "grm",
    "AGENTS.md",
    "TODO.md",
]

[[bin]]
name = "grm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6"
clap_mangen = "0.3"
dirs = "6"
fs4 = "0.13"
flate2 = "1"
gix = { version = "0.84.0", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls"] }
indicatif = "0.17"
libc = "0.2"
minisign-verify = "0.2"
owo-colors = "4"
os_pipe = "1.2"
nu-cmd-lang = "0.113.1"
nu-command = { version = "0.113.1", default-features = false, features = ["os"] }
nu-engine = { version = "0.113.1", features = ["os"] }
nu-parser = "0.113.1"
nu-protocol = { version = "0.113.1", features = ["os"] }
nuon = "0.113.1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
terminal_size = "0.4"
ureq = "2"
walkdir = "2"
xz2 = "0.1"
zstd = "0.13"

[dev-dependencies]
fs4 = "0.13"
hex = "0.4"
minisign = "0.9"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
xz2 = "0.1"
zstd = "0.13"
