[package]
name = "grimoire"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
description = "A fast, git-native, POSIX package manager with reproducible installs and composable customization layers."
license = "MIT"
repository = "https://github.com/grimoire-of-glass/grimoire"
homepage = "https://github.com/grimoire-of-glass/grimoire"
readme = "README.md"
keywords = ["package-manager", "cli", "homebrew", "nix"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "tome-example/",
    "addendum-example/",
    "tests/",
    "docs/",
    ".github/",
    "grm",
    "AGENTS.md",
    "TODO.md",
]

[[bin]]
name = "grm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.3"
dirs = "6"
fs4 = "0.13"
flate2 = "1"
gix = { version = "0.84.0", default-features = false, features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "worktree-mutation", "sha1"] }
indicatif = "0.17"
libc = "0.2"
minisign-verify = "0.2"
owo-colors = "4"
os_pipe = "1.2"
nu-cmd-lang = "0.113.1"
nu-engine = { version = "0.113.1", features = ["os"] }
nu-glob = "0.113.1"
nu-path = "0.113.1"
nu-parser = "0.113.1"
nu-protocol = { version = "0.113.1", features = ["os"] }
nu-system = "0.113.1"
nuon = "0.113.1"
regex = "1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
terminal_size = "0.4"
ureq = "2"
walkdir = "2"
# `static` builds the vendored liblzma instead of linking the host one via pkg-config —
# a host-dependency leak, and a blocker for packaging grimoire itself.
xz2 = { version = "0.1", features = ["static"] }
zstd = "0.13"

[dev-dependencies]
fs4 = "0.13"
minisign = "0.9"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
xz2 = "0.1"
zstd = "0.13"
